--- a/web/package.json
+++ b/web/package.json
@@ -9,14 +9,21 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
-    "lodash.shuffle": "4.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-flip-toolkit": "latest",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
