Added translations + static file caching

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -37,6 +37,8 @@ services:
       - type: bind
         source: ./creds
         target: /app/creds
+    tmpfs:
+      - /app/tmp/build
     logging:
       driver: "json-file"
       options:
