--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "js-base64": "^3.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-toolkit": "latest",
