Fixed double & encoding in react.

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,20 @@ web/node_modules
 ./db
 ./timescale-db
 ./timescaledb-data
+node_modules
+pkg
+*.swp
+*.*.swp
+build
+.vscode
+.vs
+server.exe
+server
+twitter_worker
+topTweets
+dbSidecar
+db
+backups
+backups/*
+.DS_Store
+timescaledb-data
